[package]
name = "curl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
tui = { version = "0.19.0", features = ["crossterm"] }
unicode-width = "0.1.10"
