[package]
name = "curl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
regex = "1.8.4"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
serde_json = "1.0.97"
tui = { version = "0.19.0", features = ["crossterm"] }
tui-textarea = "0.2.0"
unicode-width = "0.1.10"
